--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -39,54 +39,50 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_task_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minWidth="200dp"
-            android:text="考评任务编号:463782643"
-            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:minWidth="200dp"
-            android:text="考评城市:黄石"
             android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/tv_task_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:minWidth="200dp"
+            android:textSize="16sp"/>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minWidth="200dp"
-            android:text="考评开始时间:2401-19-19"
-            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tv_cheaker_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:minWidth="200dp"
-            android:text="检查人员:分点"
             android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:minWidth="200dp"
+            android:textSize="16sp"/>
+
 
     </LinearLayout>
 
