--- a/app/src/main/res/layout/cock_insert_fragment.xml
+++ b/app/src/main/res/layout/cock_insert_fragment.xml
@@ -2,8 +2,8 @@
 
 <com.tutu.pestcs.widget.TuLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/tbase"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -192,47 +192,140 @@
                 style="@style/describ_title"
                 android:text="蟑迹类型"/>
 
+
             <LinearLayout
+                android:id="@+id/ll_zhangjileixing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
-                    style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                    <TextView
-                        style="@style/describ_title2"
-                        android:text="虫尸:"/>
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
 
-                    <EditText
-                        android:id="@+id/et_chongshi"
-                        style="@style/et_style2"
-                        android:layout_width="wrap_content"
-                        android:hint="0"
-                        android:minWidth="50dp"/>
+                        <TextView
+                            style="@style/describ_title2"
+                            android:text="虫尸:"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="个"/>
+                        <EditText
+                            android:id="@+id/et_chongshi"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:paddingLeft="4dp"
+                            android:text="残片:"/>
+
+                        <EditText
+                            android:id="@+id/et_canpian"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:text="空卵鞘壳:"/>
+
+                        <EditText
+                            android:id="@+id/et_kongluanqiaoke"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:paddingLeft="4dp"
+                            android:text="蟑螂粪便:"/>
+
+                        <EditText
+                            android:id="@+id/et_zhanglangfenbian"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="处"/>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
                     style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp">
 
                     <TextView
                         style="@style/describ_title2"
                         android:paddingLeft="4dp"
-                        android:text="残片:"/>
+                        android:text="蜕皮:"/>
 
                     <EditText
-                        android:id="@+id/et_canpian"
+                        android:id="@+id/et_tuipi"
                         style="@style/et_style2"
                         android:layout_width="wrap_content"
                         android:hint="0"
@@ -246,89 +339,6 @@
                         android:text="个"/>
                 </LinearLayout>
 
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        style="@style/describ_title2"
-                        android:text="空卵鞘壳:"/>
-
-                    <EditText
-                        android:id="@+id/et_kongluanqiaoke"
-                        style="@style/et_style2"
-                        android:layout_width="wrap_content"
-                        android:hint="0"
-                        android:minWidth="50dp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="个"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        style="@style/describ_title2"
-                        android:paddingLeft="4dp"
-                        android:text="蟑螂粪便:"/>
-
-                    <EditText
-                        android:id="@+id/et_zhanglangfenbian"
-                        style="@style/et_style2"
-                        android:layout_width="wrap_content"
-                        android:hint="0"
-                        android:minWidth="50dp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="处"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/insert_mouse_fragment_ll_style"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="20dp">
-
-                <TextView
-                    style="@style/describ_title2"
-                    android:paddingLeft="4dp"
-                    android:text="蜕皮:"/>
-
-                <EditText
-                    android:id="@+id/et_tuipi"
-                    style="@style/et_style2"
-                    android:layout_width="wrap_content"
-                    android:hint="0"
-                    android:minWidth="50dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="4dp"
-                    android:gravity="center"
-                    android:text="个"/>
             </LinearLayout>
 
             <LinearLayout
