--- a/app/src/main/res/layout/mosquitos_insert_fragment.xml
+++ b/app/src/main/res/layout/mosquitos_insert_fragment.xml
@@ -45,7 +45,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="4dp"
                         android:gravity="center"
-                        android:text="个"/>
+                        android:text="米"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -75,6 +75,63 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    style="@style/insert_mouse_fragment_ll_style"
+                    android:layout_width="0dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        style="@style/describ_title2"
+                        android:text="查见小型积水:"/>
+
+                    <EditText
+                        android:id="@+id/et_chanjianxiaoxingjishui"
+                        style="@style/et_style2"
+                        android:layout_width="wrap_content"
+                        android:hint="自动计算"
+                        android:enabled="false"
+                        android:minWidth="50dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="4dp"
+                        android:gravity="center"
+                        android:text="个"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/insert_mouse_fragment_ll_style"
+                    android:layout_width="0dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        style="@style/describ_title2"
+                        android:paddingLeft="4dp"
+                        android:text="阳性:"/>
+
+                    <EditText
+                        android:id="@+id/et_chajianxiaoxingjishuiyangxing"
+                        style="@style/et_style2"
+                        android:layout_width="wrap_content"
+                        android:enabled="false"
+                        android:hint="自动计算"
+                        android:minWidth="50dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="4dp"
+                        android:gravity="center"
+                        android:text="个"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/ll_xiaoxingjishui_wai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,61 +141,7 @@
                     style="@style/describ_title"
                     android:text="小型积水类型"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        style="@style/insert_mouse_fragment_ll_style"
-                        android:layout_width="0dp"
-                        android:layout_weight="1">
-
-                        <TextView
-                            style="@style/describ_title2"
-                            android:text="查见小型积水:"/>
-
-                        <EditText
-                            android:id="@+id/et_chanjianxiaoxingjishui"
-                            style="@style/et_style2"
-                            android:layout_width="wrap_content"
-                            android:hint="0"
-                            android:minWidth="50dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="4dp"
-                            android:gravity="center"
-                            android:text="个"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        style="@style/insert_mouse_fragment_ll_style"
-                        android:layout_width="0dp"
-                        android:layout_weight="0.7">
-
-                        <TextView
-                            style="@style/describ_title2"
-                            android:paddingLeft="4dp"
-                            android:text="阳性:"/>
-
-                        <EditText
-                            android:id="@+id/et_chajianxiaoxingjishuiyangxing"
-                            style="@style/et_style2"
-                            android:layout_width="wrap_content"
-                            android:enabled="false"
-                            android:hint="自动计算"
-                            android:minWidth="50dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="4dp"
-                            android:gravity="center"
-                            android:text="个"/>
-                    </LinearLayout>
-                </LinearLayout>
             </LinearLayout>
 
 
@@ -147,7 +150,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
