--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,7 @@
     <color name="title_bg">#373B3E</color>
     <color name="video_bg">#ededed</color>
 
+    <item name="gray_holo_dark" type="color">#ff464646</item>
+    <item name="gray_holo_light" type="color">#ffd0d0d0</item>
 
 </resources>
