--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -77,7 +77,7 @@
             android:minWidth="120dp"
             android:paddingBottom="6dp"
             android:paddingTop="6dp"
-            android:text="考评城名称:"
+            android:text="考评城市名称:"
             android:textSize="@dimen/sp16"/>
 
         <EditText
@@ -140,7 +140,7 @@
             android:textSize="@dimen/sp16"/>
 
         <EditText
-            android:hint="单位:万"
+            android:hint="单位:万人"
             android:maxLength="4"
             android:inputType="number"
             android:paddingTop="0dp"
@@ -199,6 +199,7 @@
             android:textSize="@dimen/sp16"/>
 
         <EditText
+            android:hint="4位数字"
             android:maxLength="4"
             android:inputType="number"
             android:paddingTop="0dp"
