--- a/app/src/main/res/layout/activity_cheak_recoder_detail.xml
+++ b/app/src/main/res/layout/activity_cheak_recoder_detail.xml
@@ -12,10 +12,33 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_height">
 
+            <LinearLayout
+                android:id="@+id/ll_back"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_marginLeft="16dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:text="返回"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
             <TextView
+                android:layout_width="wrap_content"
                 style="@style/title_style"
                 android:layout_centerInParent="true"
                 android:text="修改现场检查记录"/>
@@ -236,7 +259,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_selector"
-                android:text="退出"
+                android:text="删除"
                 android:textColor="@color/white"/>
 
             <Button
