--- a/app/src/main/res/layout/mosquitos_insert_fragment.xml
+++ b/app/src/main/res/layout/mosquitos_insert_fragment.xml
@@ -383,6 +383,65 @@
                 </LinearLayout>
 
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:text="沟渠积水:"/>
+
+                        <EditText
+                            android:id="@+id/et_gouqujishui"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:paddingLeft="4dp"
+                            android:text="阳性:"/>
+
+                        <EditText
+                            android:id="@+id/et_gouqujishuiyangxing"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -721,7 +780,7 @@
                     <RadioGroup
                         android:id="@+id/rg_shuiTiType"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="70dp"
                         android:orientation="horizontal"
                         android:paddingLeft="20dp"
                         android:paddingTop="4dp">
