--- a/app/src/main/res/layout/activity_cheak_recoder_detail.xml
+++ b/app/src/main/res/layout/activity_cheak_recoder_detail.xml
@@ -12,213 +12,109 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/tab_height">
+            android:layout_height="@dimen/tab_height"
+            android:background="@color/colorPrimary">
 
             <LinearLayout
                 android:id="@+id/ll_back"
-                android:gravity="center_vertical"
                 android:layout_width="wrap_content"
-                android:orientation="horizontal"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:src="@mipmap/ic_launcher"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
-                    android:layout_height="wrap_content"/>
+                    android:src="@mipmap/ic_launcher"/>
+
                 <TextView
-                    android:textSize="16sp"
-                    android:textColor="@color/white"
-                    android:text="返回"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="返回"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
 
             </LinearLayout>
 
 
             <TextView
-                android:layout_width="wrap_content"
                 style="@style/title_style"
+                android:layout_width="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="修改现场检查记录"/>
         </RelativeLayout>
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/ll_modify"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
             <LinearLayout
-                android:id="@+id/ll_modify"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="8dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:text="单位类型:"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="单位类型:"/>
-
-                    <TextView
-                        android:id="@+id/et_unit_type"
-                        style="@style/et_style"
-                        android:layout_width="wrap_content"
-                        android:gravity="center_vertical"
-                        android:hint="请填写"
-                        android:minWidth="100dp"
-                        />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="11dp"
-                        android:text="是否是重点单位"/>
-
-                    <CheckBox
-                        android:id="@+id/cb_zhongdian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                <TextView
+                    android:enabled="false"
+                    android:id="@+id/et_unit_type"
+                    style="@style/et_style"
+                    android:layout_width="wrap_content"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:hint="请填写"
+                    android:minWidth="100dp"
+                    />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="单位名称/检查地点"/>
 
-                    <EditText
-                        android:id="@+id/et_name"
-                        style="@style/et_style"
-                        android:hint="请填写"
-                        android:maxLength="15"/>
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="11dp"
+                    android:text="是否是重点单位"/>
+
+                <CheckBox
+                    android:enabled="false"
+                    android:id="@+id/cb_zhongdian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_review"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="40dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:text="单位名称/检查地点"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="考评城市:"/>
-
-                    <TextView
-                        android:id="@+id/tv_city"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        android:minWidth="140dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="28dp"
-                        android:text="检查人员:"/>
-
-                    <TextView
-                        android:id="@+id/tv_cheaker_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="单位类型:"/>
-
-                    <TextView
-                        android:id="@+id/tv_unity_type"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        android:minWidth="140dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="28dp"
-                        android:text="是否重点单位:"/>
-
-                    <TextView
-                        android:id="@+id/tv_zhongdian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="单位名称/检查地点:"/>
-
-                    <TextView
-                        android:id="@+id/tv_address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        />
-
-                </LinearLayout>
+                <EditText
+                    android:enabled="false"
+                    android:id="@+id/et_address"
+                    style="@style/et_style"
+                    android:hint="请填写"
+                    android:maxLength="15"/>
             </LinearLayout>
-
-        </FrameLayout>
+        </LinearLayout>
 
 
         <com.astuetz.PagerSlidingTabStrip
@@ -229,10 +125,10 @@
             android:background="@color/main_bg2"/>
 
         <android.support.v4.view.ViewPager
-            android:layout_weight="1"
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             />
 
         <LinearLayout
@@ -307,8 +203,6 @@
             android:textColor="@color/lightColorAccent"
             android:textSize="@dimen/sp18"/>
     </LinearLayout>
-
-
 
 
 </FrameLayout>
